# rain

./: .bazelrc  .clang-format  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  external
cirrus/: BUILD.bazel  cirrus.h  cirrus.hpp  cirrus2llvm.cpp  cirrus2wasm.cpp  lib.cpp  lib_c.cpp  llvm2wasm.cpp  main.cpp  wasm2wat.cpp
cirrus/ast/: BUILD.bazel  node.hpp
cirrus/ast/expr/: BUILD.bazel  all.hpp  binary_operator.cpp  binary_operator.hpp  block.cpp  block.hpp  call.cpp  call.hpp  exec.cpp  exec.hpp  export.cpp  export.hpp  expression.cpp  expression.hpp  float.cpp  float.hpp  function.cpp  function.hpp  identifier.cpp  identifier.hpp  if.cpp  if.hpp  integer.cpp  integer.hpp  let.cpp  let.hpp  member.cpp  member.hpp  parenthesis.cpp  parenthesis.hpp  return.cpp  return.hpp  type_declaration.cpp  type_declaration.hpp
cirrus/ast/type/: BUILD.bazel  all.hpp  function.cpp  function.hpp  interface.cpp  interface.hpp  opaque.cpp  opaque.hpp  struct.cpp  struct.hpp  tuple.hpp  type.cpp  type.hpp  unresolved.cpp  unresolved.hpp
cirrus/code/: BUILD.bazel  builder.cpp  builder.hpp  compiler+lit.cpp  compiler+op.cpp  compiler+stmt.cpp  compiler+type.cpp  compiler.cpp  compiler.hpp  initialize.cpp  initialize.hpp  linker.cpp  linker.hpp  module.cpp  module.hpp  scope.cpp  scope.hpp  target.cpp  target.hpp  writer.cpp
cirrus/err/: BUILD.bazel  all.hpp  binary_operator.hpp  simple.hpp  syntax.hpp
cirrus/lang/: BUILD.bazel  lexer+util.hpp  lexer.cpp  lexer.hpp  lexer.test.cpp  lexer_util.hpp  location.hpp  module.cpp  module.hpp  parser.cpp  parser.hpp  parser.test.cpp  token.hpp  validator.cpp  validator.hpp
cirrus/transform/: BUILD.bazel  codegen.cpp  codegen.hpp  transformer.hpp  visiter.hpp
cirrus/util/: BUILD.bazel  before_return.hpp  colors.hpp  defer.hpp  log.hpp  ptr.hpp  result.hpp  retain.cpp  retain.hpp  string.hpp  twine.hpp  twine.test.cpp
rain/: BUILD.bazel  buffer.hpp  common.hpp  compile.hpp  decompile.hpp  link.hpp  llvm2wasm.cpp  rain+decompile.cpp  rain+link.cpp  rain.cpp  rain.hpp  rain2llvm.cpp  rainc.cpp  wasm2wat.cpp
rain/ast/: BUILD.bazel
rain/ast/expr/: BUILD.bazel  all.hpp  binary_operator.cpp  binary_operator.hpp  block.cpp  block.hpp  boolean.hpp  call.cpp  call.hpp  ctor.cpp  ctor.hpp  exec.cpp  exec.hpp  export.cpp  export.hpp  expression.cpp  expression.hpp  float.cpp  float.hpp  function.cpp  function.hpp  identifier.cpp  identifier.hpp  if.cpp  if.hpp  integer.cpp  integer.hpp  let.cpp  let.hpp  member.cpp  member.hpp  parenthesis.cpp  parenthesis.hpp  return.cpp  return.hpp  statement.hpp  type_declaration.cpp  type_declaration.hpp
rain/ast/type/: BUILD.bazel  all.hpp  function.cpp  function.hpp  interface.cpp  interface.hpp  opaque.cpp  opaque.hpp  struct.hpp  tuple.cpp  tuple.hpp  type.cpp  type.hpp  unresolved.cpp  unresolved.hpp
rain/code/: BUILD.bazel  compiler+lit.cpp  compiler+op.cpp  compiler+stmt.cpp  compiler+type.cpp  compiler.cpp  compiler.hpp  initialize.cpp  initialize.hpp  linker.cpp  linker.hpp  module.cpp  module.hpp  scope.cpp  scope.hpp  target.cpp  target.hpp  writer.cpp
rain/crypto/: BUILD.bazel  sha256.cpp  sha256.hpp  sha256.test.cpp
rain/err/: all.hpp  binary_operator.hpp  simple.hpp  syntax.hpp
rain/lang/: BUILD.bazel  lexer+util.hpp  lexer.cpp  lexer.hpp  lexer.test.cpp  location.hpp  location.test.cpp  module.cpp  module.hpp  options.cpp  options.hpp  parse+common.hpp  parse+ctrl.cpp  parse+lit.cpp  parse+op.cpp  parse+type.cpp  parser.cpp  parser.hpp  parser.test.cpp  scope.hpp  token.hpp  validator.cpp  validator.hpp
rain/lang/ast/: BUILD.bazel  module.cpp
rain/lang/ast/expr/: BUILD.bazel  array_literal.cpp  array_literal.hpp  binary_operator.cpp  binary_operator.hpp  block.cpp  block.hpp  boolean.cpp  boolean.hpp  call.cpp  call.hpp  cast.cpp  cast.hpp  (+48 more)
rain/lang/code/: BUILD.bazel  context.cpp  context.hpp  module.cpp  module.hpp
rain/lang/err/: BUILD.bazel  all.hpp  binary_operator.cpp  binary_operator.hpp  if_type_mismatch.cpp  if_type_mismatch.hpp  multiple_definition.cpp  multiple_definition.hpp  return_type_mismatch.cpp  return_type_mismatch.hpp  simple.hpp  syntax.cpp  syntax.hpp  unary_operator.cpp  unary_operator.hpp  underline.cpp  underline.hpp
rain/lang/lex/: BUILD.bazel  lazy.cpp  lazy.hpp  lazy_lexer.cpp  lazy_lexer.hpp  lazy_list.hpp  lazy_list_lexer.hpp  lexer.hpp  lexer.test.cpp  list.hpp  list_lexer.hpp  location.hpp  location.test.cpp  state.hpp  string_value.cpp  string_value.hpp  token.hpp  tokenize.cpp  tokenize.hpp
rain/lang/parse/: BUILD.bazel  all.hpp  any.cpp  atom.cpp  binary_operator.cpp  block.cpp  call.cpp  compile_time.cpp  extern.cpp  float.cpp  function.cpp  function_declaration.cpp  identifier.cpp  if.cpp  integer.cpp  let.cpp  list.hpp  member.cpp  module.cpp  module.hpp  parenthesis.cpp  parser.hpp  struct.cpp  struct_literal.cpp  unary_operator.cpp  while.cpp
rain/lang/serial/: BUILD.bazel  builder.cpp  builder.hpp  expression.hpp  header.hpp  header_v0.hpp  kind.hpp  module.cpp  module.hpp  module.test.cpp  operator_names.cpp  operator_names.hpp  packed.hpp  type.hpp  variable.hpp
rain/lang/spec/: BUILD.bazel  lexer.spec.cpp  rain.spec.cpp
rain/lang/valid/: scope.hpp  variable.hpp
rain/lib/: compile.cpp  compile_time_functions.cpp  compile_time_functions.hpp  decompile.cpp  link.cpp  rain+compile.cpp  rain+decompile.cpp  rain+link.cpp  rain.hpp
rain/serial/: builder.cpp  builder.hpp  expression.hpp  header.hpp  header_v0.hpp  module.cpp  module.hpp  module.test.cpp  type.hpp  variable.hpp
rain/spec/: BUILD.bazel  array.spec.cpp  expression.spec.cpp  function.spec.cpp  global.spec.cpp  helpers.hpp  integration.spec.cpp  interface.spec.cpp  operators.spec.cpp  optional.spec.cpp  rain.spec.cpp  reference.spec.cpp  slice.spec.cpp  string.spec.cpp  struct.spec.cpp  util.hpp
rain/test/: BUILD.bazel  function.test.cpp  struct.test.cpp
rain/util/: BUILD.bazel  assert.hpp  colors.hpp  console.hpp  defer.hpp  log.hpp  maybe_owned_ptr.hpp  result.hpp  snprintf.c  sprintf.c  string.hpp  twine.hpp  twine.test.cpp  unreachable.hpp  wasm.hpp
(+193 files in other folders)
