load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

alias(
    name = "cirrus",
    actual = ":cirrus2wasm",
)

cc_library(
    name = "lib",
    srcs = [
        "lib.cpp",
    ],
    hdrs = [
        "cirrus.h",
        "cirrus.hpp",
    ],
    deps = [
        "//cirrus/code",
        "//cirrus/lang",
    ],
)

cc_binary(
    name = "cirrus2wasm",
    srcs = [
        "cirrus2wasm.cpp",
    ],
    deps = [
        ":lib",
    ],
)

wasm_cc_binary(
    name = "cirrus2wasm.wasm",
    cc_target = ":cirrus2wasm",
    simd = True,
)

cc_binary(
    name = "wasm2wat",
    srcs = [
        "wasm2wat.cpp",
    ],
    deps = [
        "@com_github_webassembly_wabt//:wabt",
    ],
)

wasm_cc_binary(
    name = "wasm2wat.wasm",
    cc_target = ":wasm2wat",
    simd = True,
)
