alias(
    name = "cirrus",
    actual = ":cirrus2wasm",
)

cc_library(
    name = "lib",
    srcs = [
        "lib.cpp",
    ],
    hdrs = [
        "cirrus.h",
        "cirrus.hpp",
    ],
    deps = [
        "//cirrus/code",
        "//cirrus/lang",
    ],
)

cc_binary(
    name = "cirrus2wasm",
    srcs = [
        "cirrus2wasm.cpp",
    ],
    deps = [
        ":lib",
    ],
)

cc_binary(
    name = "wasm2wat",
    srcs = [
        "wasm2wat.cpp",
    ],
    deps = [
        "@com_github_webassembly_wabt//:wabt",
    ],
)
