cc_library(
    name = "hdrs",
    hdrs = [
        "lexer.hpp",
        "lexer+util.hpp",
        "location.hpp",
        "module.hpp",
        "parser.hpp",
        "token.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
)

cc_library(
    name = "lang",
    srcs = [
        "lexer.cpp",
        "module.cpp",
        "parser.cpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        ":hdrs",
        "//cirrus/ast",
        "//cirrus/err",
        "//cirrus/util",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "lexer.test.cpp",
        "parser.test.cpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        ":lang",
        "@com_google_googletest//:gtest_main",
    ],
)
