cc_library(
    name = "util",
    srcs = [
        "retain.cpp",
    ],
    hdrs = [
        "before_return.hpp",
        "colors.hpp",
        "ptr.hpp",
        "result.hpp",
        "retain.hpp",
        "string.hpp",
        "twine.hpp",
        "wasm.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        "@llvm-project//llvm:Support",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "twine.test.cpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        ":util",
        "@com_google_googletest//:gtest_main",
    ],
)
