cc_library(
    name = "util",
    hdrs = [
        "colors.hpp",
        "defer.hpp",
        "log.hpp",
        "result.hpp",
        "string.hpp",
        "twine.hpp",
        "wasm.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        "//third_party/tl_expected",
        "@abseil-cpp//absl/strings",
        "@llvm-project//llvm:Support",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "twine.test.cpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        ":util",
        "@com_google_googletest//:gtest_main",
    ],
)
