cc_library(
    name = "location",
    hdrs = [
        "location.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
)

cc_library(
    name = "lang",
    srcs = [
        "lexer.cpp",
        "module.cpp",
        "parser.cpp",
    ],
    hdrs = [
        "lexer.hpp",
        "lexer+util.hpp",
        "module.hpp",
        "parser.hpp",
        "token.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        ":location",
        "//rain/ast",
        "//rain/err",
        "//rain/util",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "lexer.test.cpp",
        "parser.test.cpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        ":lang",
        "@com_google_googletest//:gtest_main",
    ],
)
