cc_test(
    name = "spec",
    size = "small",
    timeout = "short",
    srcs = [
        "array.spec.cpp",
        "function.spec.cpp",
        "global.spec.cpp",
        "interface.spec.cpp",
        "optional.spec.cpp",
        "reference.spec.cpp",
        "struct.spec.cpp",
        "util.hpp",
    ],
    deps = [
        "//rain:lib",
        "//rain/lang",
        "@googletest//:gtest_main",
    ],
)
