cc_library(
    name = "util",
    hdrs = [
        "assert.hpp",
        "colors.hpp",
        "console.hpp",
        "defer.hpp",
        "result.hpp",
        "string.hpp",
        "unreachable.hpp",
        "wasm.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//third_party/tl_expected",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "twine.hpp",
        "twine.test.cpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        ":util",
        "@googletest//:gtest_main",
    ],
)
