cc_library(
    name = "util",
    hdrs = [
        "assert.hpp",
        "colors.hpp",
        "console.hpp",
        "defer.hpp",
        "result.hpp",
        "unreachable.hpp",
        "wasm.hpp",
    ],
    visibility = [
        "//rain:__subpackages__",
    ],
    deps = [
        "//third_party/tl_expected",
        "@abseil-cpp//absl/strings",
    ],
)
