cc_library(
    name = "expr",
    srcs = [
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "exec.cpp",
        "export.cpp",
        "expression.cpp",
        "function.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "member.cpp",
        "parenthesis.cpp",
        "return.cpp",
    ],
    hdrs = [
        "all.hpp",
        "binary_operator.hpp",
        "block.hpp",
        "call.hpp",
        "exec.hpp",
        "export.hpp",
        "expression.hpp",
        "function.hpp",
        "identifier.hpp",
        "if.hpp",
        "integer.hpp",
        "member.hpp",
        "parenthesis.hpp",
        "return.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        "//cirrus/ast:node",
        "//cirrus/ast/type",
        "//cirrus/util",
    ],
)
