cc_library(
    name = "expr",
    srcs = [
        "binary_operator.cpp",
        "block.cpp",
        "call.cpp",
        "exec.cpp",
        "export.cpp",
        "expression.cpp",
        "float.cpp",
        "function.cpp",
        "identifier.cpp",
        "if.cpp",
        "integer.cpp",
        "let.cpp",
        "member.cpp",
        "parenthesis.cpp",
        "return.cpp",
    ],
    hdrs = [
        "all.hpp",
        "binary_operator.hpp",
        "block.hpp",
        "call.hpp",
        "exec.hpp",
        "export.hpp",
        "expression.hpp",
        "float.hpp",
        "function.hpp",
        "identifier.hpp",
        "if.hpp",
        "integer.hpp",
        "let.hpp",
        "member.hpp",
        "parenthesis.hpp",
        "return.hpp",
        "type_declaration.hpp",
    ],
    visibility = [
        "//cirrus:__subpackages__",
    ],
    deps = [
        "//cirrus/ast/type",
        "//cirrus/lang:location",
        "//cirrus/util",
    ],
)
